--- a/src/app/records/update-record/update-record.component.html
+++ b/src/app/records/update-record/update-record.component.html
@@ -20,7 +20,7 @@
     </div>
     <div class="l12">
         <label>Tipos de usuario:</label><br>
-        <input [(ngModel)]="record.user.typeView" name="typeView" disabled>
+        <p disabled>{{record.user.typeView}}</p>
                 
     </div>
 
