--- a/src/app/records/details-record/details-record.component.html
+++ b/src/app/records/details-record/details-record.component.html
@@ -43,7 +43,7 @@
           </div>
           <div class="l12">
               <label>Tipos de usuario:</label><br>
-              <input [(ngModel)]="record.user.typeView" name="typeView" disabled>
+              <p disabled>{{record.user.typeView}}</p>
                       
           </div>
   
