--- a/src/app/inventory/new-product/new-product.component.html
+++ b/src/app/inventory/new-product/new-product.component.html
@@ -48,10 +48,10 @@
                 <input [(ngModel)]="product.stock" name="stock" type="number"> 
             </div>
 
-            <!-- <div>
+            <div class="l6">
                 <label>Departamento:</label><br>
-                <input [(ngModel)]="product.department" name="department" type="text"><br>
-            </div> -->
+                <input [(ngModel)]="productX.department" name="department" type="text">
+            </div>
 
             <div class="l6">
                 <label>Reorden</label><br>
