--- a/src/app/inventory/new-product/new-product.component.html
+++ b/src/app/inventory/new-product/new-product.component.html
@@ -50,7 +50,7 @@
 
             <div class="l6">
                 <label>Departamento:</label><br>
-                <input [(ngModel)]="productX.department" name="department" type="text">
+                <input [(ngModel)]="product.department" name="department" type="text">
             </div>
 
             <div class="l6">
