--- a/src/app/structure/structure.component.html
+++ b/src/app/structure/structure.component.html
@@ -28,8 +28,7 @@
     <h5>APLICACIÓN</h5>
 
     <ul>
-
-        
+        <li [routerLink]="['/dashboard']"><button mat-button>Inicio</button></li>        
         <li [routerLink]="['/receipt']"><button mat-button>Recibos</button></li>
         <li [routerLink]="['/parking']"><button mat-button>Estacionamiento</button></li>
         <li [routerLink]="['/schedules']"><button mat-button>Horarios</button></li>
