--- a/src/app/user/show-user/edit-schedule/edit-schedule.component.css
+++ b/src/app/user/show-user/edit-schedule/edit-schedule.component.css
@@ -1,6 +1,6 @@
 .form {
-    width: 75%;
-    max-width: 1100px;
+    width: 90%;
+    max-width: 900px;
     margin: 0 auto;
 }
 
@@ -12,8 +12,15 @@
     display: none;
 }
 
-button {
-    width: initial;
+.week button {
+    width: initial !important;
+    margin: 0;
+    padding: 8px;
+}
+
+.week button:hover {
+    padding: 8px;
+    
 }
 
 table button {
