--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -18,23 +18,15 @@
             <tr>
                 <th class="left">Nombre</th>
                 <th>Tipo</th>
-                <th>Telefono</th>
+                <th>Edad</th>
                 <th>Sexo</th>
-            </tr>
-            <!-- <th colspan="3">Opciones</th> -->
+            </tr>            
         </thead>
         <tbody>
             <tr *ngFor="let user of users" [routerLink]="['/users/show', user.id]" [ngClass]="{ 'status2': user.status == 2 , 'status3': user.status == 3 }">
                 <td class="left">{{ user.name }}</td>
-                <td *ngIf="user.user_type_id == 1">Alumno</td>
-                <td *ngIf="user.user_type_id == 2">Maestro</td>
-                <td *ngIf="user.user_type_id == 3">Cajero</td>
-                <td *ngIf="user.user_type_id == 4">Contador</td>
-                <td *ngIf="user.user_type_id == 5">S Escritor</td>
-                <td *ngIf="user.user_type_id == 6">Administrador</td>
-
-                <td>{{ user.phone }}</td>
-
+                <td>{{ user.typeView }}</td>                
+                <td>{{ user.edad }}</td>
                 <td *ngIf="user.gender == 1">M</td>
                 <td *ngIf="user.gender == 2">F</td>
             </tr>
