--- a/src/app/receipt/debtors-monthly/debtors-monthly.component.html
+++ b/src/app/receipt/debtors-monthly/debtors-monthly.component.html
@@ -3,7 +3,89 @@
 
 <div *ngIf="principal">
 
-<h2 class="linksTitle"><a [routerLink]="['/receipt']"> Recibos</a> >> Deudores</h2>
+<h2 class="linksTitle"><a [routerLink]="['/receipt']"> Recibos</a> >> Mensualidades Pendientes </h2>
 
+<div class="flex">
+  <div class="l4">
+    <label>Mes:</label><br>
+    <select [(ngModel)]="dataToPost.month" name="month" (change)="getDebtors()">
+            <option *ngFor="let m of months" value="{{m.value}}">{{m.view}}</option>           
+    </select>
+  </div>
+  <div class="l4">
+    <label>Año:</label><br>
+    <input  type="number" [(ngModel)]="dataToPost.year" name="year" (change)="getDebtors()">
+  </div>
+
+  <div class="l4">
+    <label>Estatus de usuario:</label><br>
+    <select [(ngModel)]="dataToPost.deptors" name="deptors">
+      <option value="1">Pendiente</option>           
+      <option value="0">Al corriente</option>           
+    </select>
+  </div>
+
+</div>
+
+<div>
+  <h3>Alumnos sin Adeudo: {{ regularUsers.length +  "/" + (pendUsers.length + regularUsers.length) }}</h3>
+</div>
+<div class="responsive-table" *ngIf="dataToPost.deptors == '1'">
+  <table align="center" *ngIf="pendUsers.length > 0">
+      <thead>
+          <tr>
+              <!-- <th class="left">id</th> -->
+              <th>Alumno</th>
+              <th>Edad</th>
+              <th>Mensualidad</th>
+              <th>Ultimo Pago</th>
+              <th></th>
+          </tr>
+          <!-- <th colspan="3">Opciones</th> -->
+      </thead>
+      <tbody>
+          <tr *ngFor="let re of pendUsers">
+              <td class="left" [routerLink]="['/users/show', re.id]">{{ re.name }}</td>
+              <td>{{ re.edad }}</td>
+              <td>${{ re.monthly_payment.amount }}</td>
+              <td>{{ re.ultimoPago.created_at }}</td>
+              <td><a class="btn secundary" [routerLink]="['/receipt/create']">Pagar</a></td>
+
+
+
+          </tr>
+      </tbody>
+
+  </table>  
+  <h3 *ngIf="pendUsers.length == 0">Sin Alumnos Pendientes</h3>
+</div>
+
+<div class="responsive-table" *ngIf="dataToPost.deptors != 1">
+
+  <table align="center" *ngIf="pendUsers.length > 0">
+    <thead>
+        <tr>
+            <!-- <th class="left">id</th> -->
+            <th>Alumno</th>
+            <th>Pagó</th>
+            <th>Fecha de Pago</th>
+            <th>Edad</th>
+        </tr>
+        <!-- <th colspan="3">Opciones</th> -->
+    </thead>
+    <tbody>
+        <tr *ngFor="let re of regularUsers">
+            <td class="left" [routerLink]="['/users/show', re.id]">{{ re.name }}</td>
+            <td>${{ re.ultimoPago.amount }}</td>
+            <td>{{ re.ultimoPago.created_at }}</td>
+            <td>{{ re.edad }}</td>
+
+
+
+        </tr>
+    </tbody>
+
+</table>  
+<h3 *ngIf="regularUsers.length == 0">Sin Alumnos Regulares</h3>
 
 </div>
