--- a/src/app/records/update-record/update-record.component.html
+++ b/src/app/records/update-record/update-record.component.html
@@ -1,4 +1,14 @@
+<h2>Editar Asistencia</h2>
 <form class=" flex" (submit)="update()">
+
+    <div class="l6">
+        <label>Usuario:</label>
+        <p><a [routerLink]="['/users/show', record.user_id]">{{ record.user.name }}</a></p>
+    </div>
+    <div class="l6">
+        <label>Tipos de usuario:</label><br>
+        <p disabled>{{ record.user.typeView }}</p>                
+    </div>
   
     <div class="l6">              
         <label>Entrada:</label><br>
@@ -12,16 +22,27 @@
     <div class="l6">              
         <label>Fecha:</label><br>
         <input type="date" [(ngModel)]="record.date" name="date">                                                  
+    </div>    
+
+    <div class="l6" *ngIf="record.isWorked()">              
+        <label>Tiempo trabajado:</label><br>
+        <input [(ngModel)]="record.time_worked" name="time_worked">                                                  
     </div>
 
-    <div class="l12">
-        <label>Usuario:</label><br>
-        <input [(ngModel)]="record.user.name" name="name" disabled>                      
+    <div class="l6" *ngIf="record.isWorked()">              
+        <label>Tiempo Extra:</label><br>
+        <input [(ngModel)]="record.time_extra" name="time_extra">                                                  
     </div>
-    <div class="l12">
-        <label>Tipos de usuario:</label><br>
-        <p disabled>{{record.user.typeView}}</p>
-                
+
+    <div class="l6" *ngIf="record.isWorked()">              
+        <label>Tipo de asistencia:</label><br>
+        <p>{{ record.typeView() }}</p>            
+    </div>
+
+    
+    <div class="l12" *ngIf="record.isWorked()">              
+        <label>Observación:</label><br>
+        <textarea [(ngModel)]="record.observation" name="observation"></textarea>            
     </div>
 
     <!-- <div class="l12">
@@ -31,5 +52,5 @@
         </div>
         
     </div> -->
-    <button class="btn blue">Actualizar</button>        
+    <button class="btn blue l12">Actualizar</button>        
 </form>
